# toolsmell

./: .pre-commit-hooks.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  mirror.yml
docs/: rules.md
examples/: smelly-tools.json  weather-tool-clean.json  weather-tool-smelly.json
tests/: _helpers.py  test_corpus.py  test_docs.py  test_engine.py  test_manifest.py  test_rules.py  test_score.py  test_stdio.py
tests/corpus/clean/: no-params-tool.json  weather-and-currency.json
tests/corpus/smelly/: enum-worthy-and-undocumented.json  kitchen-sink.json  name-collision.json  overloaded-and-required-missing.json
tests/fixtures/: fake_mcp_server.py
toolsmell/: __init__.py  catalog.py  cli.py  finding.py  lint.py  manifest.py  mcp_stdio.py  report.py  score.py
toolsmell/rules/: __init__.py  _util.py  description.py  examples.py  naming.py  schema.py
