[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "toolsmell"
version = "0.1.0"
description = "Lint an MCP server's tool descriptions and JSON schemas for smells that make agents use the tools worse."
readme = "README.md"
license = { text = "Prosperity Public License 3.0.0" }
requires-python = ">=3.9"
authors = [{ name = "Cole Munz" }]
dependencies = []
keywords = ["mcp", "model-context-protocol", "linter", "static-analysis",
            "tool-descriptions", "json-schema", "agent-tools", "quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/munzzyy/toolsmell"
Issues = "https://github.com/munzzyy/toolsmell/issues"

[project.scripts]
toolsmell = "toolsmell.cli:main"

[tool.setuptools.packages.find]
include = ["toolsmell*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
